--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <div data-th-fragment="footer">
-    <a href="https://waylau.com">Welcome to waylau.com</a>
+    <a href="https://www.baidu.com">Welcome to baidu.com</a>
 </div>
 </body>
 </html>
